--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
       <mat-select
         panelClass="sort-select"
         [(ngModel)]="sort"
+        (selectionChange)="searchGames(sort)"
       >
         <mat-option value="name">Name</mat-option>
         <mat-option value="-released">Released</mat-option>
@@ -18,7 +19,7 @@
 
 <div class="games" >
   <div *ngFor="let game of games">
-    <div class="game">
+    <div class="game" (click)="openGameDetails(game.id)">
     <div class="game-thumb-container">
       <img *ngIf="game.background_image"
         src="{{ game.background_image }}"
@@ -40,5 +41,3 @@
   </div>
   </div>
 </div>
-
-
