--- a/src/app/components/game-tabs/game-tabs.component.html
+++ b/src/app/components/game-tabs/game-tabs.component.html
@@ -25,5 +25,21 @@
         </span>
       </p>
     </mat-tab>
+    <mat-tab label="Screenshots">
+      <img
+        class="game-screenshot"
+        src="https://i.ytimg.com/vi/14B63zzyBZs/maxresdefault.jpg"
+        alt="game-screenshot"
+      />
+    </mat-tab>
+    <mat-tab label="Trailers">
+      <video
+        class="game-trailer"
+        controls
+        >
+        <source src="https://steamcdn-a.akamaihd.net/steam/apps/256693661/movie_max.mp4">
+        Your browser does not support the video
+      </video>
+    </mat-tab>
   </mat-tab-group>
 </div>
