changed class name game-tabs, added style css for game-tabs

--- a/src/app/components/game-tabs/game-tabs.component.html
+++ b/src/app/components/game-tabs/game-tabs.component.html
@@ -1,40 +1,40 @@
-<div class="game-tabs">
+<div class="tabs">
   <mat-tab-group mat-align-tabs="start" backgroundColor="primary">
     <mat-tab label="About">
-      <p class="game-tabs-par">
+      <p class="tabs-par">
         Platforms:
         <span>PC</span>
       </p>
-      <p class="game-tabs-par">
+      <p class="tabs-par">
         Publishers:
         <span>Blizzard</span>
       </p>
-      <p class="game-tabs-par">
+      <p class="tabs-par">
         Website:
-        <a class="game-tabs-link" href="#" target="_blank">https://</a>
+        <a class="tabs-link" href="#" target="_blank">https://</a>
       </p>
-      <div class="game-description">Description</div>
-      <p class="game-tabs-votes">
+      <div class="tabs-description">Description</div>
+      <p class="tabs-votes">
         <span>
-          <mat-icon class="game-votes-up">thumb_up</mat-icon>
-          <span class="game-votes-count">75</span>
+          <mat-icon class="tabs-votes-up">thumb_up</mat-icon>
+          <span class="tabs-votes-count">75</span>
         </span>
         <span>
-          <mat-icon class="game-votes-down">thumb_down</mat-icon>
-          <span class="game-votes-count">15</span>
+          <mat-icon class="tabs-votes-down">thumb_down</mat-icon>
+          <span class="tabs-votes-count">15</span>
         </span>
       </p>
     </mat-tab>
     <mat-tab label="Screenshots">
       <img
-        class="game-screenshot"
+        class="tabs-screenshot"
         src="https://i.ytimg.com/vi/14B63zzyBZs/maxresdefault.jpg"
         alt="game-screenshot"
       />
     </mat-tab>
     <mat-tab label="Trailers">
       <video
-        class="game-trailer"
+        class="tabs-trailer"
         controls
         >
         <source src="https://steamcdn-a.akamaihd.net/steam/apps/256693661/movie_max.mp4">
