added logic to details.component

--- a/src/app/components/game-tabs/game-tabs.component.scss
+++ b/src/app/components/game-tabs/game-tabs.component.scss
@@ -36,7 +36,7 @@
   }
   &-screenshot {
     margin-top: 5px;
-    width: calc(100% - 10px);
+    width: 100%;
   }
   &-trailer {
     width: 100%;
