--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="details">
   <div class="game-banner">
-    <p *ngIf="!game.background_image">No image</p>
-    <img *ngIf="game.background_image"
+    <p *ngIf="!game.background_image?.length">No image</p>
+    <img *ngIf="game.background_image?.length"
       class="game-banner-img"
       src="{{ game.background_image }}"
       alt="background-image"
@@ -11,7 +11,7 @@
     <div class="details-wrapper">
       <div class="game-header">
         <h1 class="game-header-title">{{ game.name }}</h1>
-        <h2 class="game-header-release-date">
+        <h2 class="game-header-release-date" *ngIf="game.released?.length">
           Release: {{ game.released | date }}
         </h2>
         <p class="game-header-genres">
@@ -38,7 +38,7 @@
           >
         </div>
       </div>
-      <app-game-tabs></app-game-tabs>
+      <app-game-tabs [game]="game"></app-game-tabs>
     </div>
   </div>
 </div>
