--- a/src/app/components/game-tabs/game-tabs.component.html
+++ b/src/app/components/game-tabs/game-tabs.component.html
@@ -3,41 +3,49 @@
     <mat-tab label="About">
       <p class="tabs-par">
         Platforms:
-        <span>PC</span>
+        <span *ngFor="let platform of game.parent_platforms; let last=last">
+          {{ platform.platform.name}}
+          <span *ngIf="!last">, </span>
+        </span>
       </p>
-      <p class="tabs-par">
+      <p *ngIf="game.publishers.length" class="tabs-par">
         Publishers:
-        <span>Blizzard</span>
+        <span *ngFor="let publisher of game.publishers; let last=last">
+          {{publisher.name}}
+          <span *ngIf="!last">, </span>
+        </span>
       </p>
-      <p class="tabs-par">
+      <p class="tabs-par" *ngIf="game.website?.length">
         Website:
-        <a class="tabs-link" href="#" target="_blank">https://</a>
+        <a class="tabs-link" href="{{ game.website }}" target="_blank">{{ game.website}}</a>
       </p>
-      <div class="tabs-description">Description</div>
+      <div class="tabs-description" [innerHTML]="game.description"></div>
       <p class="tabs-votes">
-        <span>
-          <mat-icon class="tabs-votes-up">thumb_up</mat-icon>
-          <span class="tabs-votes-count">75</span>
-        </span>
-        <span>
-          <mat-icon class="tabs-votes-down">thumb_down</mat-icon>
-          <span class="tabs-votes-count">15</span>
-        </span>
+        <ng-container *ngFor="let rating of game.ratings">
+          <span *ngIf="rating.title === 'exceptional'">
+            <mat-icon class="tabs-votes-up">thumb_up</mat-icon>
+            <span class="tabs-votes-count"> {{rating.count || 0}}</span>
+          </span>
+          <span *ngIf="rating.title === 'skip'">
+            <mat-icon class="tabs-votes-down">thumb_down</mat-icon>
+            <span class="tabs-votes-count">{{rating.count || 0}}</span>
+          </span>
+        </ng-container>
       </p>
     </mat-tab>
-    <mat-tab label="Screenshots">
-      <img
+    <mat-tab label="Screenshots" *ngIf="game.screenshots?.length">
+      <img *ngFor="let screenshot of game.screenshots"
         class="tabs-screenshot"
-        src="https://i.ytimg.com/vi/14B63zzyBZs/maxresdefault.jpg"
+        src="{{ screenshot.image }}"
         alt="game-screenshot"
       />
     </mat-tab>
-    <mat-tab label="Trailers">
-      <video
+    <mat-tab label="Trailers" *ngIf="game.trailers?.length">
+      <video *ngFor="let trailer of game.trailers; index as i"
         class="tabs-trailer"
         controls
         >
-        <source src="https://steamcdn-a.akamaihd.net/steam/apps/256693661/movie_max.mp4">
+        <source src="{{ trailer.data.max}}"/>
         Your browser does not support the video
       </video>
     </mat-tab>
