--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="filters">
-    <mat-form-field>
+<div class="wrapper">
+    <mat-form-field *ngIf="games.length">
       <mat-label>Sort</mat-label>
       <mat-select
         panelClass="sort-select"
@@ -8,16 +8,16 @@
       >
         <mat-option value="name">Name</mat-option>
         <mat-option value="-released">Released</mat-option>
-        <mat-option value="-added">Added</mat-option>
-        <mat-option value="-created">Created</mat-option>
-        <mat-option value="-updated">Updated</mat-option>
+        <mat-option value="added">Added</mat-option>
+<!--        <mat-option value="created">Created</mat-option>-->
+<!--        <mat-option value="updated">Updated</mat-option>-->
         <mat-option value="-rating">Rating</mat-option>
-        <mat-option value="metacritic">Metacritic</mat-option>
+        <mat-option value="-metacritic">Metacritic</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
-
-<div class="games" >
+<p class="error-search" *ngIf="!games.length">Unfortunately the game at your request is not in our database.</p>
+<div class="games" *ngIf="games.length">
   <div *ngFor="let game of games">
     <div class="game" (click)="openGameDetails(game.id)">
     <div class="game-thumb-container">
