--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -23,11 +23,19 @@
     border-bottom-left-radius: 5px;
     outline: none;
     border: none;
+
+    @media (max-width:450px ) {
+      width: 200px;
+    }
+    @media (max-width:350px ) {
+      width: 150px;
+    }
+
   }
   &-button {
     background: #3248b7;
     padding: 10px;
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
+    //border-left: 1px solid rgba(0, 0, 0, 0.3);
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     color: #ffff;
