--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,6 +46,7 @@
   [length] = "count"
   [pageSize] = "20"
   [pageSizeOptions]="[10, 30, 100]"
+  [showFirstLastButtons] = true
   (page) = "onPaginateChange($event)"
 >
 </mat-paginator >
