--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -18,15 +18,9 @@
       width: 80px;
       height: 80px;
     }
-
-    .dial {
+    .dial, .value {
       stroke-width: 10;
     }
-
-    .value {
-      stroke-width: 10;
-    }
-
     .value-text {
       fill: #fff;
       font-weight: 700;
@@ -39,13 +33,14 @@
 
   .game-gauge {
     position: absolute;
-    top: 50px;
+    top: 100px;
     right: 0;
+    @media(max-width: 1200px){
+      top: 50px;
+    }
     @media(max-width: 400px){
       top: 80px;
     }
-
-
     &-label {
       font-size: 20px;
       color: #ffff;
@@ -65,10 +60,10 @@
 
 .game {
   &-banner {
-    height: 440px;
+    height: 500px;
     overflow: hidden;
     @media(max-width: 800px){
-      height: auto;
+      height: 300px;
     }
 
     &-img {
@@ -80,7 +75,7 @@
   &-content {
     text-align: center;
     position: relative;
-    top: -200px;
+    top: -300px;
   }
 
   &-header {
@@ -89,25 +84,20 @@
       color: #ffff;
       font-weight: 700;
       line-height: 70px;
-      white-space: nowrap;
-      @media (max-width: 650px){
-        font-size: 50px;
-      }
-      @media (max-width: 500px){
-        font-size: 30px;
-        margin: 0;
+      @media (max-width: 1400px){
+        font-size: calc(20px + (70 - 20) * ((100vw - 280px) / (1400 - 280)));
       }
       @media (max-width: 300px){
-        font-size: 24px;
-        margin: 0;
+        line-height: 40px;
       }
     }
 
     &-release-date {
       color: #ffff;
       font-weight: 700;
-      @media (max-width: 500px){
-        font-size: 20px;
+      font-size: 30px;
+      @media (max-width: 550px){
+        font-size: calc(14px + (30 - 14) * ((100vw - 280px) / (1400 - 280)));
         margin: 0;
       }
     }
