--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
-    max-width: 1200px;
     margin: 20px auto;
-    padding-left: 20px;
+    display: flex;
+    justify-content: center;
   }
 
   ::ng-deep {
