--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,7 +1,8 @@
 <div class="search-container">
   <form class="search-form" #form="ngForm" (ngSubmit)="onSubmit(form)">
     <span class="logo" routerLink="/">RAWG</span>
-    <input type="search" ngModel class="search-input" name="search" placeholder="Find your game from 500,000+ games">
+    <input type="search" [(ngModel)]="title" class="search-input" name="search"
+           placeholder="Find your game from 500,000+ games">
     <button class="search-button">Search</button>
   </form>
 </div>
